# git-worktree-manager

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  release-please-config.json
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-please.yml  release.yml  test.yml
src/: cli.rs  config.rs  console.rs  constants.rs  cwshare_setup.rs  error.rs  git.rs  hooks.rs  lib.rs  main.rs  messages.rs  registry.rs  session.rs  shared_files.rs  shell_functions.rs  tui.rs  update.rs
src/cli/: completions.rs  global.rs
src/operations/: ai_tools.rs  backup.rs  clean.rs  config_ops.rs  diagnostics.rs  display.rs  git_ops.rs  global_ops.rs  helpers.rs  mod.rs  path_cmd.rs  shell.rs  stash.rs  worktree.rs
src/operations/launchers/: detached.rs  foreground.rs  iterm.rs  mod.rs  tmux.rs  wezterm.rs  zellij.rs
tests/: test_backup.rs  test_cli.rs  test_config.rs  test_constants.rs  test_cwshare_setup.rs  test_export_import.rs  test_git.rs  test_global_ops.rs  test_hooks.rs  test_launch_methods.rs  test_operations.rs  test_registry.rs  test_session.rs  test_shared_files.rs  test_stash.rs  test_stats.rs  test_tree.rs  test_workflows.rs
tests/common/: mod.rs
