[package]
name = "git-worktree-manager"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "CLI tool integrating git worktree with AI coding assistants"
license = "BSD-3-Clause"
repository = "https://github.com/DaveDev42/git-worktree-manager"
homepage = "https://github.com/DaveDev42/git-worktree-manager"
keywords = ["git", "worktree", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "gw"
path = "src/main.rs"

[[bin]]
name = "cw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
console = "0.15"
dialoguer = "0.11"
dirs = "6"
walkdir = "2"
regex = "1"
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

# cargo-binstall support
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gw-{ target }{ archive-suffix }"
bin-dir = "gw{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
